# nu_urc

nu_urc_control/: CMakeLists.txt  package.xml
nu_urc_control/config/: chipkit_pins.md  control.yaml  topics_list.txt
nu_urc_control/include/nu_urc_control/: ArmHW.h  DriveHW.h  RoverHW.h  VelocityPIDController.h
nu_urc_control/launch/: control.launch
nu_urc_control/src/: nu_urc_control.cpp
nu_urc_control/src/nu_urc_control/: .RoverHW.cpp.swp  ArmHW.cpp  DriveHW.cpp  RoverHW.cpp  VelocityPIDController.cpp
nu_urc_description/: CMakeLists.txt  package.xml
nu_urc_description/launch/: arm_description.launch  rover_description.launch
nu_urc_description/urdf/: nu_urc_arm.urdf  nu_urc_arm.xacro  nu_urc_rover.urdf  nu_urc_rover.xacro  nu_urc_rover.xacro.copy  nu_urc_rover_v0.xacro  nu_urc_rover_v1.xacro  transmission_test.gazebo  transmission_test.gazebo.xacro
nu_urc_msgs/: CMakeLists.txt  package.xml
nu_urc_msgs/msg/: GpsFix.msg  Imu.msg  JointCommands.msg  SensorData.msg
nu_urc_sense/: CMakeLists.txt  package.xml
nu_urc_vision/: CMakeLists.txt  package.xml
nu_urc_vision/include/nu_urc_vision/: .CameraVideoPublisher.h.swp  CameraVideoPublisher.h
nu_urc_vision/launch/: camera_calibrator_tool.launch  camera_video_publisher.launch
nu_urc_vision/src/: camera_video_publisher.cpp
nu_urc_vision/src/nu_urc_vision/: .CameraVideoPublisher.cpp.swp  CameraVideoPublisher.cpp
rosserial_chipkit/: CMakeLists.txt  package.xml
rosserial_chipkit/src/ros_lib/: chipKITHardware.h  ros.h
rosserial_chipkit/src/rosserial_chipkit/: make_libraries.py
